--- a/source/introduction.tex
+++ b/source/introduction.tex
@@ -16,13 +16,13 @@
 
 {\sffamily\bfseries
 {\huge
-Proceedings of the 8$^{\text{th}}$ Python in Science Conference}
+Proceedings of the 9$^{\text{th}}$ Python in Science Conference}
 
 \bigskip
 \large
 SciPy Conference -- 
-Pasadena, CA, August 18-23,
-2009. 
+Pasadena, CA, June 28--July 3,
+2010. 
 }
 
 \vfill
@@ -30,8 +30,9 @@ Pasadena, CA, August 18-23,
 \vfill
 \hline
 
-Editors: \quad Ga\"el {\sc Varoquaux},  \quad 
-St\'efan {\sc van der Walt}, \quad K. Jarrod {\sc Millman}
+Editors: \quad St\'efan {\sc van der Walt}, \quad K. Jarrod {\sc Millman},
+\quad Ga\"el {\sc Varoquaux}
+
 \end{center}
 \vfill
 \vfill
@@ -64,8 +65,8 @@ St\'efan {\sc van der Walt}, \quad K. Jarrod {\sc Millman}
     \hrule
 
 
-Proceedings of the 8th Python in Science Conference
-by Ga\"el Varoquaux, St\'efan van der Walt, K. Jarrod Milllman
+Proceedings of the 9th Python in Science Conference
+by St\'efan van der Walt, K. Jarrod Millman, Ga\"el Varoquaux
 ISBN:   978-0-557-23212-3
 
 }
@@ -85,17 +86,18 @@ ISBN:   978-0-557-23212-3
 {\bfsf Conference chair}&\\
 K. Jarrod Millman & UC Berkeley, Helen Wills Neuroscience Institute, {\sc
 USA}\\
+XXX MISSING XXX
 \smallskip
 {\bfsf Tutorial Co-chairs}&\\
-Dave Peterson & Enthought Inc, Austin, {\sc USA} \\
-Fernando Perez & UC Berkeley, Helen Wills Neuroscience Institute, {\sc
-USA}\\
+Dave Peterson & Enthought Inc, Austin, {\sc USA}\\
+XXX MISSING XXX
 \smallskip
 {\bfsf Program Co-chairs}&\\
-Ga\"el Varoquaux & INRIA Saclay, {\sc France} \\
 St\'efan van der Walt & Stellenbosh University, {\sc South Africa}\\
+XXX MISSING XXX
 \smallskip
 {\bfsf Program Committee}&\\
+XXX MISSING XXX\\
 Michael Aivazis & Center for Advanced Computing Research, California
 Institute of Technology {\sc USA}\\
 Brian Granger & Physics Department, California Polytechnic State
